[package]
name = "planetside"
version = "0.1.0"
authors = ["zeruslord <zeruslord@gmail.com>"]

[lib]
name = "planetside"

[[bin]]
name = "opsbot"

[[bin]]
name = "opsscript"

[[bin]]
name = "pickups-overlay"

[[bin]]
name = "gelos-overlay"

[dependencies]
nom = "^2.1.0"
serde = "^0.8.6"
serde_json = "^0.8.6"
serde_derive = "^0.8.6"
websocket = "^0.17.1"
hyper = "^0.9.18"
threadpool = "^1.3.2"

[dependencies.conrod]
version = "^0.53.0"
default-features = false
features = ["glium", "winit"]

[dependencies.discord]
version = "^0.7"
default-features=false
