[package]
name = "planetside"
version = "0.1.0"
authors = ["zeruslord <zeruslord@gmail.com>"]

[lib]
name = "planetside"

[[bin]]
name = "gelos-overlay"

[dependencies]
nom = "^2.1.0"
serde = "^0.8.6"
serde_json = "^0.8.6"
serde_derive = "^0.8.6"
websocket = "^0.20.2"
hyper = "^0.11"
threadpool = "^1.3.2"
futures = "^0.1.14"
tokio-core = "^0.1.8"

[dependencies.conrod]
version = "^0.54.0"
default-features = false
features = ["glium", "winit"]
